fix button white space on small screens

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -16,6 +16,11 @@ body{
     width:100%;
 }
 
+.btn {
+    white-space: normal;
+}
+
+
 .btn-active{
     font-weight: bold;
 }
